# THESIS-HSI-Classification

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
mlruns/1/models/m-bfbbe0151ada49a88d71b4254955698d/artifacts/: MLmodel  conda.yaml  requirements.txt
mlruns/1/models/m-bfbbe0151ada49a88d71b4254955698d/artifacts/data/: model.pth
notebooks/: 00_eda_&_visualization-Indian-pines.ipynb  00_eda_&_visualization-Pavia-University.ipynb  00_eda_&_visualization.ipynb  01_DR_&_Sampling.ipynb  01_hsi_classification_demo.ipynb  02_sigma_sensitivity_analysis.ipynb  03_classifier_comparison.ipynb  classifier_comparison_results.csv
notebooks/.virtual_documents/: 01_hsi_classification_demo.ipynb  02_sigma_sensitivity_analysis.ipynb  03_classifier_comparison.ipynb
scripts/: run_baseline_experiment.py
src/: __init__.py
src/data/: __init__.py  download_datasets.py  hsi_loader.py  patch_generator.py  preprocessing.py
src/features/: __init__.py  patch_extractor.py
src/models/: __init__.py  inference.py  metrics.py  networks.py  similarity_metrics.py  train_model.py
src/visualization/: __init__.py  visualize.py
